# sink

./: .env.example  README.md  pyproject.toml
scripts/: format  lint
silk/: __main__.py  schemas.py
silk/core/: configs.py
silk/parsers/: parser.py
silk/parsers/adapters/: base.py  crowdstrike.py  qualys.py
silk/providers/: base.py  crowdstrike.py  qualys.py
silk/reports/: base.py  hosts.py
